Fix documents being stashed during session

We must use a temp doc otherwise we overwrite the url of the active doc.

BUG: 497478
BUG: 499482
(cherry picked from commit 41ee6adfdc3f94099ac40b47e2d12b2187eb37f5)